--- a/styles/main.css
+++ b/styles/main.css
@@ -18,6 +18,20 @@ body {
     font-family: Roboto;
 }
 
+main {
+    position: relative;
+}
+
+main::before {
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-image: url(/assets/dsotm.jpg);
+    opacity: 0.18;
+}
+
+
 header {
     padding: 32px;
     border-bottom: 2px solid rgba(65, 65, 65, 0.8);
