--- a/styles/main.css
+++ b/styles/main.css
@@ -25,9 +25,11 @@ main {
 main::before {
     content: "";
     position: absolute;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-image: url(/assets/dsotm.jpg);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(/assets/dsotm.jpg) center no-repeat;
     opacity: 0.18;
 }
 
@@ -48,11 +50,11 @@ header {
     line-height: 28px;
     margin: 0 16px;
     text-decoration: none;
-    transition: 0.6s;  
+    transition: 0.6s;
 }
 
 .links a:hover {
-    color: var(--color-green);    
+    color: var(--color-green);
 }
 
 #wrapper {
@@ -71,7 +73,7 @@ header {
     border-color: rgb(113, 89, 193);
     transition: 0.7s;
 }
- 
+
 #wrapper h1 {
     font-size: 32px;
     line-height: 32px;
@@ -99,7 +101,7 @@ header {
 }
 
 #wrapper a:hover {
-    color: rgba(112, 89, 193, 0.89);    
+    color: rgba(112, 89, 193, 0.89);
 }
 
 .col-md-12>h1 {
