--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ main::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/assets/dsotm2.jpg);
+    background-image: url(/assets/dsotm.jpg);
     opacity: 0.18;
 }
 
