--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
+::-webkit-scrollbar {
+    height: 10px;
+    width: 10px; background-color: #000;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;background-color: #373737;
+}
 /* Criação de variáveis */
 :root {
     --color-green: #50fa7b;
@@ -15,7 +23,7 @@
 body {
     background: #1c1e25;
     color: white;
-    font-family: Roboto;
+    font-family: Roboto, sans-serif !important;
 }
 
 main {
@@ -41,7 +49,7 @@ header {
 }
 
 .links {
-    margin: 0 auto;
+    display: inherit;
 }
 
 .links a {
@@ -50,20 +58,21 @@ header {
     line-height: 28px;
     margin: 0 16px;
     text-decoration: none;
-    transition: 0.6s;
+    transition: 0.3s;
 }
 
 .links a:hover {
+    transform: scale(1.2);
     color: var(--color-green);
 }
 
 #wrapper {
     margin: 0 auto;
-    padding: 32px;
+    padding: 28px;
 }
 
 #wrapper img {
-    border-radius: 36%;
+    border-radius: 40px;
     border: 3px solid var(--color-green);
     margin-bottom: 32px;
     height: 164px;
@@ -89,10 +98,11 @@ header {
 }
 
 #wrapper p {
-    max-width: 500px;
+    max-width: 520px;
     margin: 32px auto;
     font-size: 16px;
-    line-height: 28px;
+    line-height: 24px;
+    color: rgba(255, 255, 255, 0.85)
 }
 
 #wrapper p a {
@@ -112,14 +122,22 @@ header {
 }
 
 #links-footer {
-    margin-top: 40px;
     border-top: 1px solid rgba(65, 65, 65, 0.342);
     padding-top: 12px;
     width: 100%;
+    font-size: 20px;
 }
 
-#links-footer a{
+#links-footer a {
+    line-height: 20px;
     border-bottom: 1px solid var(--color-green);
+}
+
+.created {
+    font-size: 12px;
+    padding-top: 12px;
+    padding-bottom: 8px;
+    margin: 0 auto;
 }
 
 /*==== CARDS ====*/
@@ -128,11 +146,12 @@ header {
     margin-bottom: 12px;
     border-radius: 10%;
     width: 180px;
-    border: 1px double white;
+    border: 1px solid #ffffff8a;
     transition: 300ms ease;
 }
 
 .card>img {
+  object-fit: contain;
   min-height: 124px;
 }
 
