--- a/styles/main.css
+++ b/styles/main.css
@@ -43,8 +43,8 @@ main::before {
 
 
 header {
-    padding: 32px;
-    border-bottom: 2px solid rgba(65, 65, 65, 0.8);
+    padding: 28px;
+    border-bottom: 1px solid #2a7ae4dd;
     background: rgba(0, 0, 0, 0.15);
 }
 
@@ -73,14 +73,15 @@ header {
 
 #wrapper img {
     border-radius: 40px;
-    border: 3px solid var(--color-green);
+    border: 1px solid var(--color-green);
     margin-bottom: 32px;
     height: 164px;
 }
 
 #wrapper img:hover {
-    border-color: rgb(113, 89, 193);
-    transition: 0.7s;
+    border-color: #2a7ae4;
+    border: 2px solid;
+    transition: 0.5s ease-in-out;
 }
 
 #wrapper h1 {
@@ -111,7 +112,7 @@ header {
 }
 
 #wrapper a:hover {
-    color: rgba(112, 89, 193, 0.89);
+    color: #2a7ae4;
 }
 
 .col-md-12>h1 {
@@ -119,6 +120,11 @@ header {
     line-height: 32px;
     font-weight: bold;
     margin-bottom: 40px;
+}
+
+footer {
+    border-top: 1px solid #2a7ae4dd;
+    background: rgba(0, 0, 0, 0.15);
 }
 
 #links-footer {
@@ -129,6 +135,11 @@ header {
 }
 
 #links-footer a {
+    line-height: 20px;
+    border-bottom: 1px solid #2a7ae4;
+}
+
+#links-footer a:hover {
     line-height: 20px;
     border-bottom: 1px solid var(--color-green);
 }
@@ -142,7 +153,7 @@ header {
 
 /*==== CARDS ====*/
 .card {
-    background-color: #1c1e25;
+    background-color: #212121dc;
     margin-bottom: 12px;
     border-radius: 10%;
     width: 180px;
@@ -156,6 +167,6 @@ header {
 }
 
 .card:hover {
-  border: 2px solid var(--color-green);
+  border: 2px solid #2a7ae4;
   transform: translateY(-4px);
 }
