--- a/styles/main.css
+++ b/styles/main.css
@@ -37,10 +37,10 @@ main::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(/assets/dsotm.jpg);
-    opacity: 0.18;
+    background-image: url(../assets/codewallpaper.jpg);
+    background-size: cover;
+    opacity: 0.12;
 }
-
 
 header {
     padding: 28px;
@@ -75,13 +75,14 @@ header {
     border-radius: 40px;
     border: 1px solid var(--color-green);
     margin-bottom: 32px;
-    height: 164px;
+    height: 148px;
 }
 
 #wrapper img:hover {
     border-color: #2a7ae4;
     border: 2px solid;
     transition: 0.5s ease-in-out;
+    transform: scale(1.05);
 }
 
 #wrapper h1 {
@@ -100,6 +101,7 @@ header {
 
 #wrapper p {
     max-width: 520px;
+    font-weight: 500;
     margin: 32px auto;
     font-size: 16px;
     line-height: 24px;
@@ -153,7 +155,7 @@ footer {
 
 /*==== CARDS ====*/
 .card {
-    background-color: #212121dc;
+    background-color: #2c2c2c8e;
     margin-bottom: 12px;
     border-radius: 10%;
     width: 180px;
